将Java版本升级到25